-Added gpt4o text2sql code

--- a/Main_Code.ipynb
+++ b/Main_Code.ipynb
@@ -250,7 +250,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Open Source Sentiment Analysis (Flair Molel)"
+        "## Flair Model"
       ],
       "metadata": {
         "id": "eNfVsbfNPMTG"
@@ -284,7 +284,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Open Source Sentiment Analysis (Finbert Molel)"
+        "## Finbert Model"
       ],
       "metadata": {
         "id": "f_cgFD8QQ8Up"
@@ -322,7 +322,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Open Source Sentiment Analysis (Bert Molel)"
+        "## Bert Model"
       ],
       "metadata": {
         "id": "CUUJyMSkfSUD"
@@ -1767,7 +1767,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Step 1: Database Connection"
+        "## Text2SQL OpenAI gpt-3.5-turbo"
+      ],
+      "metadata": {
+        "id": "USeTR2KXEMKB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Step 1: Database Connection"
       ],
       "metadata": {
         "id": "AK2djDjibk6N"
@@ -1793,7 +1802,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Step 2: Fetch Tables and Metadata"
+        "Step 2: Fetch Tables and Metadata"
       ],
       "metadata": {
         "id": "q4PIf1Z0bzjN"
@@ -1823,7 +1832,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Step 3: Convert User Question to SQL Query"
+        "Step 3: Convert User Question to SQL Query"
       ],
       "metadata": {
         "id": "rMLmswCgcCdY"
@@ -1876,7 +1885,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Step 4: Execute SQL Query and Explain Results"
+        "Step 4: Execute SQL Query and Explain Results"
       ],
       "metadata": {
         "id": "ac65sZOqcQOk"
@@ -1929,7 +1938,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Step 5: Main Workflow with User Input"
+        "Step 5: Main Workflow with User Input"
       ],
       "metadata": {
         "id": "avHijdfIhDCj"
@@ -1974,10 +1983,174 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Text2SQL OpenAI gpt-4o"
+      ],
+      "metadata": {
+        "id": "_uTqgZBrEp4P"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sqlalchemy import create_engine, inspect\n",
+        "\n",
+        "# Database URL\n",
+        "DATABASE_URL = 'postgresql+psycopg2://thodoris:B4AqjEYBhDPXDHmuSW8MYgfdPp5Nob88@dpg-cpmtb4g8fa8c73aoakig-a.frankfurt-postgres.render.com/capstone_fs'\n",
+        "\n",
+        "# Create an engine\n",
+        "engine = create_engine(DATABASE_URL)"
+      ],
       "metadata": {
         "id": "XZnT76d1LgMQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fetch_table_metadata(engine):\n",
+        "    inspector = inspect(engine)\n",
+        "    tables = inspector.get_table_names()\n",
+        "    metadata = {}\n",
+        "    for table in tables:\n",
+        "        columns = inspector.get_columns(table)\n",
+        "        metadata[table] = {col['name']: col['type'] for col in columns}\n",
+        "    return metadata\n",
+        "\n",
+        "metadata = fetch_table_metadata(engine)\n",
+        "print(metadata)"
+      ],
+      "metadata": {
+        "id": "S6YLTaA8EyZk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import openai\n",
+        "import os\n",
+        "from google.colab import userdata\n",
+        "\n",
+        "# Fetch the API key from Google Colab secrets\n",
+        "api_key = userdata.get('OPENAI_API_KEY')\n",
+        "\n",
+        "# Initialize OpenAI client with the API key\n",
+        "client = openai.OpenAI(api_key=api_key)\n",
+        "\n",
+        "def convert_question_to_sql(user_question, metadata):\n",
+        "    schema_description = \"Database schema:\\n\"\n",
+        "    for table, columns in metadata.items():\n",
+        "        schema_description += f\"Table: {table}\\n\"\n",
+        "        for column in columns:\n",
+        "            schema_description += f\"  - {column} ({columns[column]})\\n\"\n",
+        "\n",
+        "    prompt = f\"{schema_description}\\nConvert the following question into SQL using precise table and column names and postgre sql syntax:\\n{user_question} Give only the code.\"\n",
+        "\n",
+        "    response = client.chat.completions.create(\n",
+        "        model=\"gpt-4o\",\n",
+        "        messages=[\n",
+        "            {\"role\": \"system\", \"content\": \"You are an SQL expert.\"},\n",
+        "            {\"role\": \"user\", \"content\": prompt}\n",
+        "        ]\n",
+        "    )\n",
+        "\n",
+        "    sql_query = response.choices[0].message.content.strip()\n",
+        "\n",
+        "    # Clean up the SQL query\n",
+        "    sql_query = sql_query.replace(\"```sql\", \"\").replace(\"```\", \"\").strip()\n",
+        "\n",
+        "\n",
+        "    return sql_query"
+      ],
+      "metadata": {
+        "id": "4-nJ7F0DE2YJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "def execute_sql_query(engine, sql_query):\n",
+        "    with engine.connect() as connection:\n",
+        "        result = pd.read_sql(sql_query, connection)\n",
+        "    return result\n",
+        "\n",
+        "def explain_results(user_question, result):\n",
+        "    # Get the total count of matching rows\n",
+        "    total_count = len(result)\n",
+        "\n",
+        "    # Extract column names and a sample row\n",
+        "    columns = result.columns.tolist()\n",
+        "    sample_row = result.head(5).iloc[0].tolist()\n",
+        "\n",
+        "    # Construct a sample string from the first row\n",
+        "    sample_details = ', '.join([f\"{col}: {val}\" for col, val in zip(columns, sample_row)])\n",
+        "\n",
+        "    # Create a summary explanation\n",
+        "    prompt = (f\"You asked: '{user_question}'\\n\"\n",
+        "              f\"There are {total_count} results. \"\n",
+        "              f\"{sample_details}\\n\"\n",
+        "              \"Explain the result in simple terms.\")\n",
+        "\n",
+        "    response = client.chat.completions.create(\n",
+        "        model=\"gpt-4o\",\n",
+        "        messages=[\n",
+        "            {\"role\": \"system\", \"content\": \"You are a data analyst.\"},\n",
+        "            {\"role\": \"user\", \"content\": prompt}\n",
+        "        ]\n",
+        "    )\n",
+        "\n",
+        "    explanation = response.choices[0].message.content.strip()\n",
+        "    return explanation"
+      ],
+      "metadata": {
+        "id": "IdsGbJSEE6BS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tabulate import tabulate\n",
+        "\n",
+        "# Fetch metadata\n",
+        "metadata = fetch_table_metadata(engine)\n",
+        "\n",
+        "# Prompt user for input\n",
+        "user_question = input(\"Please enter your question: \")\n",
+        "\n",
+        "# Convert question to SQL query\n",
+        "try:\n",
+        "    sql_query = convert_question_to_sql(user_question, metadata)\n",
+        "\n",
+        "    # Execute SQL query and store results\n",
+        "    result = execute_sql_query(engine, sql_query)\n",
+        "\n",
+        "    # Explain the results\n",
+        "    explanation = explain_results(user_question, result)\n",
+        "\n",
+        "    # Final output\n",
+        "    print(\"\\nFinal Output:\\n\")\n",
+        "    print(f\"Your question was: {user_question}\\n\")\n",
+        "    print(f\"Generated SQL Query:\\n{sql_query}\\n\")\n",
+        "    print(\"SQL Query Result:\")\n",
+        "    print(tabulate(result, headers='keys', tablefmt='psql'))\n",
+        "    print(\"\\nExplanation of the Result:\")\n",
+        "    print(explanation)\n",
+        "except Exception as e:\n",
+        "    print(f\"Error: {e}\")"
+      ],
+      "metadata": {
+        "id": "GkCA3W9nE8Dc"
       },
       "execution_count": null,
       "outputs": []
@@ -1990,7 +2163,6 @@
         "69DIWRzxF2Pv",
         "TCZBsbZLeeAW",
         "eV0zHTEDeT23",
-        "5UExRrAg6OnA",
         "QIwVDDITIXMc",
         "hJL5qPz0JrkG",
         "rOMYbo3hKawX",
@@ -2002,6 +2174,7 @@
         "iG2_gSKCR7nc",
         "iclMY3Lq6ds1",
         "q7LYamEnRSt_",
+        "BZYrxM59STCa",
         "OCz6mhK2beqC",
         "oKQqwq3_hWra",
         "DMfmKQ_1hgQ_",
@@ -2016,11 +2189,8 @@
         "vfnbc-ehzSDw",
         "8g0PQIkb3CaT",
         "cEZOhEzbIA_I",
-        "AK2djDjibk6N",
-        "q4PIf1Z0bzjN",
-        "rMLmswCgcCdY",
-        "ac65sZOqcQOk",
-        "avHijdfIhDCj"
+        "USeTR2KXEMKB",
+        "_uTqgZBrEp4P"
       ]
     },
     "kernelspec": {
